--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   <header class="primary-header">
     <div class="container">
       <div class="nav-wrapper">
-        <a href="#"><img src="images/logo.svg" alt="Manage"></a>
+        <svg class="logo " width="146" height="24">
+          <use xlink:href="images/logo.svg#logo"></use>
+        </svg>
         <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
-          <img class="icon-hamburger" src="images/icon-hamburger.svg" alt="" aria-hidden="true">
-          <img class="icon-close" src="images/icon-close.svg" alt="" aria-hidden="true">
           <span class="visually-hidden">Menu</span>
         </button>
         <nav class="primary-navigation" id="primary-navigation">
@@ -39,7 +39,7 @@
   </header>
 
   <main>
-    <section class="padding-block-900">
+    <section class="hero | text-center-sm-only  padding-block-900">
       <div class="container">
         <div class="even-columns">
           <div class="flow">
@@ -50,17 +50,17 @@
               view.</p>
             <button class="button">Get Started</button>
           </div>
-          <div>
+          <div class="hero__image">
             <img src="images/illustration-intro.svg" alt="">
           </div>
         </div>
       </div>
     </section>
 
-    <section class="padding-block-900">
+    <section class="sale-points | padding-block-900">
       <div class="container">
         <div class="even-columns">
-          <div class="flow text-center-sm-only margi" style="--flow-spacer: 1.5rem">
+          <div class="sale-points__blob | flow text-center-sm-only " style="--flow-spacer: 1.5rem">
             <h2 class="fs-secondary-heading fw-bold">What’s different about Manage?</h2>
             <p>Manage provides all the functionality your team needs, without the complexity. Our software is
               tailor-made for modern
@@ -106,10 +106,10 @@
       </div>
     </section>
 
-    <section class="carousel | padding-block-700  text-center">
+    <section class="carousel | padding-block-900  text-center">
       <h2 class="fs-secondary-heading fw-bold">What they've said</h2>
       <!-- Carousel here -->
-      <ul class="slider">
+      <ul class="slider | mx-auto">
         <li>
           <img src="images/avatar-anisha.png" alt="">
 
@@ -158,7 +158,7 @@
       <button class="button">Get Started</button>
     </section>
 
-    <section class="cta | padding-block-900 bg-accent-400 text-neutral-100">
+    <section class="cta | margin-top-900 padding-block-900 bg-accent-400 text-neutral-100">
       <div class="container">
         <div class="even-columns vertical-align-center">
           <div>
@@ -174,43 +174,45 @@
 
   <footer class="primary-footer | padding-block-700 bg-neutral-900 text-neutral-100">
     <div class="container">
-      <div class="primary-footer-wrapper">
-        <div class="primary-footer-logo-social">
-          <a href="#" aria-label="home">
-            <svg class="logo" width="146" height="24">
-              <use xlink:href="images/logo.svg#logo"></use>
-            </svg>
-          </a>
+      <div class="primary-footer__wrapper">
+        <a class="primary-footer__logo" href="#" aria-label="home">
+          <svg class="logo | mx-auto"  width="146" height="24">
+            <use xlink:href="images/logo.svg#logo"></use>
+          </svg>
+        </a>
 
-          <ul class="social-list" role="list" aria-label="Social links">
-            <li><a aria-label="facebook" href="#">
-                <svg class="social-icon">
-                  <use xlink:href="images/social-icons.svg#icon-facebook"></use>
-                </svg></a>
-            </li>
-            <li><a aria-label="youtube" href="#">
-                <svg class="social-icon">
-                  <use xlink:href="images/social-icons.svg#icon-youtube"></use>
-                </svg>
-              </a></li>
-            <li><a aria-label="twitter" href="#">
-                <svg class="social-icon">
-                  <use xlink:href="images/social-icons.svg#icon-twitter"></use>
-                </svg>
-              </a></li>
-            <li><a aria-label="pinterest" href="#">
-                <svg class="social-icon">
-                  <use xlink:href="images/social-icons.svg#icon-pinterest"></use>
-                </svg>
-              </a></li>
-            <li><a aria-label="instragram" href="#">
-                <svg class="social-icon">
-                  <use xlink:href="images/social-icons.svg#icon-instagram"></use>
-                </svg>
-              </a></li>
-          </ul>
-        </div>
-        <div class="primary-footer-nav">
+        <ul class="social-list" role="list" aria-label="Social links">
+          <li><a aria-label="facebook" href="#">
+              <svg class="social-icon">
+                <use xlink:href="images/social-icons.svg#icon-facebook"></use>
+              </svg></a>
+          </li>
+          <li><a aria-label="youtube" href="#">
+              <svg class="social-icon">
+                <use xlink:href="images/social-icons.svg#icon-youtube"></use>
+              </svg>
+            </a>
+          </li>
+          <li><a aria-label="twitter" href="#">
+              <svg class="social-icon">
+                <use xlink:href="images/social-icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li><a aria-label="pinterest" href="#">
+              <svg class="social-icon">
+                <use xlink:href="images/social-icons.svg#icon-pinterest"></use>
+              </svg>
+            </a>
+          </li>
+          <li><a aria-label="instragram" href="#">
+              <svg class="social-icon">
+                <use xlink:href="images/social-icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        <div class="primary-footer__nav-wrapper">
           <nav class="footer-nav">
             <ul class="flow" style="--flow-spacer: 1em" aria-label="Footer" role="list">
               <li><a href="#">Home</a></li>
@@ -223,13 +225,13 @@
             </ul>
           </nav>
         </div>
-        <div class="primary-footer-form">
-          <form action="">
+        <!-- <div class="primary-footer-form"> -->
+          <form class="primary-footer__form" action="">
             <input type="email">
             <button class="button" data-shadow="none">Go</button>
           </form>
-          <p>Copyright 2020. All Rights Reserved</p>
-        </div>
+          <p class="primary-footer__copyright">Copyright 2020. All Rights Reserved</p>
+        <!-- </div> -->
       </div>
     </div>
   </footer>
